.provarCaches/00D5f000005vwGkEAI/objects/rstk__poroute__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_poroute</customHelpPage>
    <description>poroute__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poroute_div__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__poroute_routeid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poroute_routeid__c + &apos; (&apos; + LEFT( rstk__poroute_desc__c , (77 -  LEN(rstk__poroute_routeid__c) )) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__poroute_routeid__c + &apos; &apos; +  rstk__poroute_desc__c + &apos; &apos; +  rstk__poroute_routetype__r.rstk__portetype_typeid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poroute_desc__c</fullName>
        <inlineHelpText>Describes the Route Type ID.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poroute_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Shipment Route Master</relationshipLabel>
        <relationshipName>divporoutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poroute_routeid__c</fullName>
        <inlineHelpText>User-defined code to identify this specific route ID.  Up to 30 characters.</inlineHelpText>
        <label>Shipment Route ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poroute_routetype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Identifies type of routing.  For example Rail, Ship, or Air.</inlineHelpText>
        <label>Route Type</label>
        <referenceTo>rstk__portetype__c</referenceTo>
        <relationshipLabel>Shipment Route Master</relationshipLabel>
        <relationshipName>portetypeporoutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shipment Route Master</label>
    <listViews>
        <fullName>rstk__RS_Shipment_Route_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__poroute_div__c</columns>
        <columns>rstk__poroute_routeid__c</columns>
        <columns>rstk__poroute_routetype__c</columns>
        <columns>rstk__poroute_desc__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Shipment Route Master</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Route Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Division_Route_id_cannot_change</fullName>
        <active>true</active>
        <description>Division and Route ID cannot be changed.</description>
        <errorConditionFormula>OR(
ISCHANGED(rstk__poroute_div__c),
ISCHANGED(rstk__poroute_routeid__c)
)</errorConditionFormula>
        <errorMessage>Division and Route ID cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>